@@ -1,3 +1,14 @@
+Thu Apr 28 14:50:05 2005  Jaiganesh Balasubramanian  <jai@dre.vanderbilt.edu>
+
+	* DAnCE/ciao/Dynamic_Component_Servant_T.cpp:
+	* DAnCE/ciao/Dynamic_Component_Servant_T.h:
+	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp:
+	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.h:
+
+	  Made changes to the CIAO infrastructure that allows the
+	  swapping capability to make use of the component instance
+	  name when we create object references.
+
 Wed Apr 27 11:15:12 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * DAnCE/ciao/Container_Base.cpp:
